2002-06-11  Nick Drochak  <ndrochak@gol.com>

	* NumberFormatInfo.cs: Make NumberNegativePattern = 1 for the ctor

2002-06-07  Nick Drochak  <ndrochak@gol.com>

	* NumberFormatInfo.cs: Make InvariantInfo.NumberNegativePattern = 1

2002-05-07  Rodrigo Moya <rodrigo@ximian.com>

	* CompareInfo.cs: new basic stub (compiles on Linux, so I assume
	it does not break the build on windows. Sorry if it does).

2002-04-23  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* NumberFormatInfo.cs: always set the values for the invariant culture
	until there are more cultures supported.

2002-04-22  Nick Drochak  <ndrochak@gol.com>

	* NumberStyles.cs: Add [Serializable].

2002-04-08  Nick Drochak  <ndrochak@gol.com>

	* UnicodeCategory.cs: Fix typos in enum names.

2002-03-04  Nick Drochak  <ndrochak@gol.com>

	* JulianCalendar.cs: JulianEra should be field, not a property.
	Thanks CorCompare (and Piers).

2002-02-12  Duncan Mak  <duncan@ximian.com>

	* CultureInfo.cs: Added the Calendar property to make the TimeZone
	class build. It's marked as MonoTODO.

2002-02-12  Nick Drochak  <ndrochak@gol.com>

	* UnicodeCategory.cs: Fix typo.

2002-02-01  Radek Doulik  <rodo@ximian.com>

	* RegionInfo.cs: started work on RegionInfo
	implemented RegionInfo (string) constructor

	* CultureInfo.cs: added internal static function,
	which could be used from RegionInfo.cs

2002-01-16  Miguel de Icaza  <miguel@ximian.com>

	* CultureInfo.cs: Completed the tables.   Now we need to actually
	fill it in.

2002-01-15  Duncan Mak  <duncan@ximian.com>

	* CultureInfo.cs: Convert it to unix text.

2002-01-04  Ravi Pratap  <ravi@ximian.com>

	* GreogrianCalendar.cs : The same old MonoTODO attribute.

2001-11-21  Miguel de Icaza  <miguel@ximian.com>

	* Locale.cs: New file, a place holder for Locale.GetText.

Wed Nov 14 16:47:07 CET 2001 Paolo Molaro <lupus@ximian.com>

	* Calendar.cs: CLSCompliant updates.

2001-11-04  Martin Weindel <martin.weindel@t-online.de>